[DSW-1377] Fix horizontal scrollbar in KM Editor

--- a/engine-wizard/scss/modules/KMEditor/Editor/_KMEditor.scss
+++ b/engine-wizard/scss/modules/KMEditor/Editor/_KMEditor.scss
@@ -20,6 +20,7 @@ $breadcrumbs-height: 40px;
             background: none;
             width: 100%;
             padding-left: 0;
+            overflow: hidden;
         }
 
         .breadcrumb-button {
